--- a/character.html
+++ b/character.html
@@ -65,10 +65,7 @@
 				<div id="c-content">
 					
 <div class="l_nav">
-    <div class="bg_nav">
-        <img src="assets/img/banner_character.png" width="1920" height="220" alt="" id="img_pc">
-        <img src="assets/img/banner_character_mb.png" width="640" height="238" alt="" id="img_mobile">
-    </div>
+   
     <nav>
         <button  onclick="dropdownMenu()" id="btndropdown" class="btndropdown"><i class="fa fa-bars" aria-hidden="true"></i></button>
             
@@ -83,7 +80,12 @@
             </div>
         </ul>
     </nav>
+    <div class="bg_nav">
+        <img src="assets/img/banner_character.png" width="1920" height="220" alt="" id="img_pc">
+        <img src="assets/img/banner_character_mb.png" width="640" height="238" alt="" id="img_mobile">
+    </div>
 </div>
+<div class="clearfix"></div>
 <div class="l_content">
     <div id="page">
         <div class="l_beadcrumb">
@@ -232,23 +234,26 @@
                 <p class="info">Infomation</p>
                 <p class="content_top">ご相談・お問い合わせはお気軽に</p>
                 <p class="content_mid">お問い合わせはこちらから </p>
-                <div class="phone_pc">
+                <div class="phone_pc pc">
                     <p class="phone">03-6212-2512</p>
                     <p class="small">受付時間　平日9:00～18:00 (土日祝除く) </p>
                 </div>
-                <div class="phone_mb">
-                    <p class="phone">TEL: <span>03-6212-2512</span></p>
-                    <p class="small">受付時間　平日9:00～18:00 (土日祝除く) </p>
+                <div class="phone_mb mb">
+                    <img src="assets/img/phone_ft_mb.png" width="560" height="110">
                 </div>
                 <div class="line">
-                    <div class="h_write">
+                    <div class="h_write pc" >
                         <img src="assets/img/icon_write.png" height="30" width="30" alt="">
                         Webからのお問い合わせはこちら <i class="fa fa-angle-right" aria-hidden="true"></i>
+                    </div>
+                    <div class="h_write mb">
+                        <img src="assets/img/write_mb.png" width="560" height="80">
                     </div>
                 </div>
             </div>  
         </div>
     </section>
+    <div class="clearfix"></div>
    <section id="menu_ft">
        <div class="container">
            <div class="row">
