--- a/character.html
+++ b/character.html
@@ -23,7 +23,7 @@
         <div class="h_top">
             <div class="row">
                 <div class="col text_left">
-                    <span>テキストが入ります。テキストが入ります。</span>
+                    <span id="fs">テキストが入ります。テキストが入ります。</span>
                 </div>
                 <div class="col text_right">
                     <ul>
