--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
 <title></title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="assets/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
 <link href="assets/css/common.css" rel="stylesheet">
 <link href="assets/css/index.css" rel="stylesheet">
 </head>
@@ -24,7 +24,7 @@
         <div class="h_top">
             <div class="row">
                 <div class="col text_left">
-                    <span>テキストが入ります。テキストが入ります。</span>
+                    <span id="fs">テキストが入ります。テキストが入ります。</span>
                 </div>
                 <div class="col text_right">
                     <ul>
